unpackaged/main/default/objects/PagesApi__Skip_Logic_Rule__c/PagesApi__Skip_Logic_Rule__c.object-meta.xml
<CustomObject>
    <label>Skip Logic Rule</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Skip Logic Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skip Logic Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>