unpackaged/main/default/objects/PagesApi__Skip_Logic_Rule__c/fields/PagesApi__Answer__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Answer__c</fullName>
    <description>Value on which the rule is activated.</description>
    <inlineHelpText>Value on which the rule is activated.</inlineHelpText>
    <label>Answer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>