unpackaged/main/default/objects/PagesApi__Skip_Logic_Rule__c/fields/PagesApi__Destination__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Destination__c</fullName>
    <description>List of fields that should appear on selecting the value matching the answer field value(CSV).</description>
    <inlineHelpText>List of fields that should appear on selecting the value matching the answer field value(CSV).</inlineHelpText>
    <label>Destination</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>