unpackaged/main/default/objects/PagesApi__Skip_Logic_Rule__c/fields/PagesApi__Field__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Field__c</fullName>
    <description>CSV field with list of fields the rule defined against.</description>
    <inlineHelpText>CSV field with list of fields the rule defined against.</inlineHelpText>
    <label>Field</label>
    <referenceTo>PagesApi__Field__c</referenceTo>
    <relationshipLabel>Skip Logic Rules</relationshipLabel>
    <relationshipName>Skip_Logic_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>